--- a/src/Makefile
+++ b/src/Makefile
@@ -50,7 +50,7 @@ SRC =	$(TARGET).c \
 	print.c \
 	adns9800_firmware.c \
 	adns9800.c \
-	platform.c
+	main.c
 
 # MCU name, you MUST set this to match the board you are using
 # type "make clean" after changing this, so all files will be rebuilt
